--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="밍!"
+        android:text="망!"
         tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="140dp" />
+        tools:layout_editor_absoluteY="131dp" />
+
+
 </android.support.constraint.ConstraintLayout>
